--- a/yes.html
+++ b/yes.html
@@ -51,7 +51,7 @@
 </head>
 <body class="gradient-background">
     <div class="flex">
-        <img src="C:\Users\Yodab\OneDrive\Desktop\Valentine\Ask-out-your-Valentine-main\images\image7.gif" alt="No Source">
+        <img src="./images\image7.gif" alt="No Source">
         </div>
         <div class="text">
     
