--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; // Update font size
         if (noClickCount < 6) {
-          noButton.textContent = ["No", "Sicher?", "BITTTTTEEEE", "Komm schon :)", "Ich bezahle auch :)", "SAAAAD"][noClickCount];
+          noButton.textContent = ["No", "Sicher?", "BITTTTTEEEE", "Komm schon :)", "Please <3", "SAAAAD"][noClickCount];
         }
       }
     });
