--- a/liebesbrief.html
+++ b/liebesbrief.html
@@ -52,7 +52,7 @@
 </head>
 <body class="gradient-background">
     <div class="flex">
-    <img src="C:\Users\Yodab\OneDrive\Desktop\Valentine\Ask-out-your-Valentine-main\images\Snapchat-1904309966[1].jpg" width="552" height="310" alt="No Source">
+    <img src=".\images\Snapchat-1904309966[1].jpg" width="552" height="310" alt="No Source">
     </div>
     <div class="text">
 
